--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.6.0"
   },
   "dependencies": {
+    "punycode": "^2.0.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   },
