--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "draft-js": "^0.9.1",
     "punycode": "^1.4.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
