added react-addons-test-utils to package.json

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "draft-js": "^0.9.1",
     "punycode": "^1.4.1",
     "react": "^15.3.2",
+    "react-addons-test-utils": "^15.3.2",
     "react-dom": "^15.3.2"
   },
   "scripts": {
