--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "pinyincushion",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://donkirkby.github.io/pinyincushion",
   "devDependencies": {
-    "react-scripts": "0.6.0",
-    "iconv-lite": "0.4.13"
+    "gh-pages": "^0.12.0",
+    "iconv-lite": "0.4.13",
+    "react-scripts": "0.6.0"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
@@ -16,6 +18,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "npm run build&&gh-pages -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
